fzf alias && alacritty config

--- a/dotfiles/alacritty.yml
+++ b/dotfiles/alacritty.yml
@@ -73,7 +73,7 @@ colors:
 
   primary:
 
-    background: '#2e3440'
+    background: '#2f3241'
     foreground: '#d8dee9'
     dim_foreground: '#a5abb6'
 
